add bootstrap location as a server var - is this secure?

--- a/html/.htaccess
+++ b/html/.htaccess
@@ -2,14 +2,6 @@
 # fail-safe in case the conf file doesn't have it
 Options All -Indexes
 
-<IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteBase /
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
-</IfModule>
 
 <IfModule mod_rewrite.c>
 RewriteEngine on
@@ -31,11 +23,26 @@ RewriteRule ^ - [E=HTTP_APP_ENVIRONMENT:staging]
 RewriteCond %{SERVER_NAME} \.dev
 RewriteRule ^ - [E=HTTP_APP_ENVIRONMENT:dev]
 
+RewriteRule ^ - [E=HTTP_APP_BOOTSTRAP:%{DOCUMENT_ROOT}/wp-load.php]
+
+
 # fail-safe for apache redirects
 SetEnvIf REDIRECT_HTTP_APP_ENVIRONMENT (.+) HTTP_APP_ENVIRONMENT=$1
+SetEnvIf REDIRECT_HTTP_APP_BOOTSTRAP (.+) HTTP_APP_BOOTSTRAP=$1
 
-# WP REWRITES/REDIRECTS
+# exclude public access to composer's vendor dir from the theme folder
+# typically the vendor dir is never publically accessible
+RewriteRule ^wp\-content\/themes\/vermilion\-app\/taco\-app\/vendor($|/) - [F,L]
 
+RewriteBase /
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
+
+
+
+</IfModule>
 
 # DENY ACCESS TO FILES/DIRECTORIES
 
