--- a/html/wp-content/themes/taco-theme/app/composer.json
+++ b/html/wp-content/themes/taco-theme/app/composer.json
@@ -6,7 +6,7 @@
   "require": {
     "tacowordpress/tacowordpress": "dev-master",
     "tacowordpress/addbysearch": "dev-uses-new-frontend-loader",
-    "phpmailer/phpmailer": "dev-master",
+    "phpmailer/phpmailer": "dev-master"
   },
   "require-dev": {
     "fzaninotto/faker": "v1.5.0"
