add node_modules and .sass-cache to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ shortcut-taco-theme
 /vendor
 /html/wp-content/themes/taco-theme/app/core/vendor/*
 /html/wp-content/uploads/*
+node_modules
+/.sass-cache
 
 *.log
 *.zip
