--- a/html/wp-content/themes/taco-theme/package.json
+++ b/html/wp-content/themes/taco-theme/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "taco_boilerplate_2015",
+  "name": "taco",
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-sass": "^1.0.0"
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
