--- a/html/.htaccess
+++ b/html/.htaccess
@@ -32,6 +32,9 @@ SetEnvIf REDIRECT_HTTP_BOOTSTRAP_WP (.+) HTTP_BOOTSTRAP_WP=$1
 
 # exclude public access to composer's vendor dir from the theme folder
 # typically the vendor dir is never publically accessible
+
+RewriteCond %{REQUEST_FILENAME} !((.*)\.php)
+RewriteCond %{REQUEST_FILENAME} -f
 RewriteRule ^wp-content/themes/taco-theme/app/core/vendor($|/) - [F,L]
 
 # robots.txt
