--- a/html/wp-content/themes/taco-theme/app/core/composer.json
+++ b/html/wp-content/themes/taco-theme/app/core/composer.json
@@ -6,6 +6,7 @@
   "require": {
     "tacowordpress/tacowordpress": "dev-master",
     "tacowordpress/addbysearch": "dev-uses-new-frontend-loader",
+    "tacowordpress/mr-spicy": "dev-master",
     "phpmailer/phpmailer": "dev-master"
   },
   "require-dev": {
