--- a/html/.htaccess
+++ b/html/.htaccess
@@ -68,6 +68,7 @@ AddOutputFilterByType DEFLATE application/xhtml+xml
 AddOutputFilterByType DEFLATE application/rss+xml
 AddOutputFilterByType DEFLATE application/javascript
 AddOutputFilterByType DEFLATE application/x-javascript
+AddOutputFilterByType DEFLATE text/javascript
 
 <ifModule mod_expires.c>
   ExpiresActive On
@@ -80,11 +81,13 @@ AddOutputFilterByType DEFLATE application/x-javascript
   ExpiresByType application/pdf "access plus 1 month"
   ExpiresByType text/x-javascript "access plus 1 month"
   ExpiresByType application/javascript "access plus 1 month"
+  ExpiresByType text/javascript "access plus 1 month"
   ExpiresByType application/x-shockwave-flash "access plus 1 month"
   ExpiresByType image/x-icon "access plus 1 year"
   ExpiresByType application/x-font-ttf "access plus 1 year"
-  ExpiresDefault "access plus 2 days"
+  ExpiresDefault "access plus 1 month"
 </ifModule>
+
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
