--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ shortcut-taco-theme
 /vendor
 /html/wp-content/themes/taco-theme/app/core/vendor/*
 /html/wp-content/uploads/*
+/html/wp-content/themes/taco-theme/_/dist/*.min.js
+/html/wp-content/themes/taco-theme/_/dist/*.min.css
 node_modules
 /.sass-cache
 
@@ -36,3 +38,5 @@ Thumbs.db
 .codekit-cache
 *.css.map
 *.js.map
+
+
