--- a/html/wp-content/themes/taco-theme/package.json
+++ b/html/wp-content/themes/taco-theme/package.json
@@ -10,6 +10,8 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "foundation-sites": "^6.2.3",
+    "jquery": "^3.0.0",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
