--- a/boilerplate/.htaccess
+++ b/boilerplate/.htaccess
@@ -2,6 +2,27 @@
 # fail-safe in case the conf file doesn't have it
 Options All -Indexes
 
+#allows everything if its on a certain host
+SetEnvIf HOST "{{localservername}}" local_server
+# SetEnvIf HOST "" staging_server
+# SetEnvIf HOST "" prod_staging_server
+# SetEnvIf HOST "" prod_live_server
+Order Deny,Allow
+
+AuthName "Restricted Area"
+AuthType Basic
+AuthUserFile {{htpassfile}}
+AuthGroupFile /
+Require valid-user
+
+#Allow valid-user
+Deny from all
+Allow from env=local_server
+# Allow from env=staging_server
+# Allow from env=prod_staging_server
+# Allow from env=prod_live_server
+Satisfy any
+
 
 <IfModule mod_rewrite.c>
 RewriteEngine on
