--- a/boilerplate/wp-content/themes/taco-theme/app/core/composer.json
+++ b/boilerplate/wp-content/themes/taco-theme/app/core/composer.json
@@ -5,6 +5,7 @@
   "minimum-stability": "dev",
   "require": {
     "tacowordpress/tacowordpress": "dev-master",
+    "tacowordpress/util": "dev-master",
     "tacowordpress/addbysearch": "dev-uses-new-frontend-loader",
     "tacowordpress/mr-spicy": "dev-master",
     "phpmailer/phpmailer": "dev-master"
